--- a/PHYS561/refs.bib
+++ b/PHYS561/refs.bib
@@ -153,3 +153,74 @@
        adsurl = {https://ui.adsabs.harvard.edu/abs/1984ApJ...287..538G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Massey_2007,
+   title={Dark matter maps reveal cosmic scaffolding},
+   volume={445},
+   ISSN={1476-4687},
+   url={http://dx.doi.org/10.1038/nature05497},
+   DOI={10.1038/nature05497},
+   number={7125},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   author={Massey, Richard and Rhodes, Jason and Ellis, Richard and Scoville, Nick and Leauthaud, Alexie and Finoguenov, Alexis and Capak, Peter and Bacon, David and Aussel, Hervé and Kneib, Jean-Paul and et al.},
+   year={2007},
+   month={Jan},
+   pages={286–290}
+}
+
+@ARTICLE{1980ApJ_241_507Y,
+       author = {{Young}, P. and {Gunn}, J.~E. and {Kristian}, J. and {Oke}, J.~B. and {Westphal}, J.~A.},
+        title = "{The double quasar Q0957+561 A, B: a gravitational lens image formed by a galaxy at z=0.39.}",
+      journal = {\apj},
+     keywords = {Galactic Clusters, Gravitational Lenses, Quasars, Spatial Distribution, Astronomical Models, Gravitational Effects, Imaging Techniques, Mass Distribution, Astrophysics},
+         year = 1980,
+        month = oct,
+       volume = {241},
+        pages = {507-520},
+          doi = {10.1086/158365},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1980ApJ...241..507Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1964MNRAS_128_307R,
+       author = {{Refsdal}, S.},
+        title = "{On the possibility of determining Hubble's parameter and the masses of galaxies from the gravitational lens effect}",
+      journal = {\mnras},
+         year = 1964,
+        month = jan,
+       volume = {128},
+        pages = {307},
+          doi = {10.1093/mnras/128.4.307},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1964MNRAS.128..307R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Wong_2019,
+   title={H0LiCOW – XIII. A 2.4 per cent measurement of H0 from lensed quasars: 5.3σ tension between early- and late-Universe probes},
+   volume={498},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stz3094},
+   DOI={10.1093/mnras/stz3094},
+   number={1},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Wong, Kenneth C and Suyu, Sherry H and Chen, Geoff C-F and Rusu, Cristian E and Millon, Martin and Sluse, Dominique and Bonvin, Vivien and Fassnacht, Christopher D and Taubenberger, Stefan and Auger, Matthew W and et al.},
+   year={2019},
+   month={Sep},
+   pages={1420–1439}
+}
+
+@article{Birrer_2020,
+   title={TDCOSMO},
+   volume={643},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/202038861},
+   DOI={10.1051/0004-6361/202038861},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Birrer, S. and Shajib, A. J. and Galan, A. and Millon, M. and Treu, T. and Agnello, A. and Auger, M. and Chen, G. C.-F. and Christensen, L. and Collett, T. and et al.},
+   year={2020},
+   month={Nov},
+   pages={A165}
+}
