--- a/PHYS561/refs.bib
+++ b/PHYS561/refs.bib
@@ -1,6 +1,6 @@
 # -*- org-ref-bibliography-notes: "notes.org"; bibtex-completion-notes-path: "."; -*-
 
-@article{narayan_lectures_1997,
+@article{narayanlectures1997,
 	title = {Lectures on {Gravitational} {Lensing}},
 	url = {http://arxiv.org/abs/astro-ph/9606001},
 	abstract = {These lectures give an introduction to
@@ -109,7 +109,7 @@
     year = "1979"
 }
 
-@article{Refsdal_1964_grav_lens,
+@article{Refsdal1964gravlens,
     author = {Refsdal, Sjur and Bondi, H.},
     title = "{ The Gravitational Lens Effect}",
     journal = {Monthly Notices of the Royal Astronomical Society},
@@ -125,7 +125,7 @@
     eprint = {https://academic.oup.com/mnras/article-pdf/128/4/295/8073511/mnras128-0295.pdf},
 }
 
-@article{schmidt_3c_1963,
+@article{schmidt3c1963,
 	title = {{3C} 273 : {A} {Star}-{Like} {Object} with {Large} {Red}-{Shift}},
 	volume = {197},
 	issn = {1476-4687},
@@ -134,16 +134,16 @@
 	abstract = {In the early 1960s, astronomers were puzzled by quasars — sources of intense radio emission that seemed to be stars, but had unintelligible optical spectra. In 1963, Maarten Schmidt solved the puzzle by recognizing the Balmer lines of hydrogen, strongly redshifted, in the spectrum of the quasar 3C 273. Schmidt reached the "most direct and least objectionable" conclusion, that 3C 273 was no star, but the enormously bright nucleus of a distant galaxy.},
 	number = {4872},
 	journal = {Nature},
-	author = {SCHMIDT, M.},
+	author = {Schmidt, M.},
 	month = mar,
 	year = {1963},
 	pages = {1040--1040},
 }
 
-@ARTICLE{1984ApJ_287_538G,
+@ARTICLE{1984ApJ287538G,
        author = {{Gorenstein}, M.~V. and {Shapiro}, I.~I. and {Rogers}, A.~E.~E. and {Cohen}, N.~L. and {Corey}, B.~E. and {Porcas}, R.~W. and {Falco}, E.~E. and {Bonometti}, R.~J. and {Preston}, R.~A. and {Rius}, A. and {Whitney}, A.~R.},
         title = "{The milli-arcsecond images of Q0957+56.1.}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Brightness Distribution, Gravitational Fields, Quasars, Radio Sources (Astronomy), Very Long Base Interferometry, Centimeter Waves, Flux Density, Gravitational Lenses, Astrophysics},
          year = 1984,
         month = dec,
@@ -154,7 +154,7 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Massey_2007,
+@article{Massey2007,
    title={Dark matter maps reveal cosmic scaffolding},
    volume={445},
    ISSN={1476-4687},
@@ -169,10 +169,10 @@
    pages={286–290}
 }
 
-@ARTICLE{1980ApJ_241_507Y,
+@ARTICLE{1980ApJ241507Y,
        author = {{Young}, P. and {Gunn}, J.~E. and {Kristian}, J. and {Oke}, J.~B. and {Westphal}, J.~A.},
         title = "{The double quasar Q0957+561 A, B: a gravitational lens image formed by a galaxy at z=0.39.}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Galactic Clusters, Gravitational Lenses, Quasars, Spatial Distribution, Astronomical Models, Gravitational Effects, Imaging Techniques, Mass Distribution, Astrophysics},
          year = 1980,
         month = oct,
@@ -183,10 +183,10 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{1964MNRAS_128_307R,
+@ARTICLE{1964MNRAS128307R,
        author = {{Refsdal}, S.},
         title = "{On the possibility of determining Hubble's parameter and the masses of galaxies from the gravitational lens effect}",
-      journal = {\mnras},
+      journal = {mnras},
          year = 1964,
         month = jan,
        volume = {128},
@@ -196,8 +196,8 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Wong_2019,
-   title={H0LiCOW – XIII. A 2.4 per cent measurement of H0 from lensed quasars: 5.3σ tension between early- and late-Universe probes},
+@article{Wong2019,
+   title={H0LiCOW – XIII. A 2.4 per cent measurement of H0 from lensed quasars: $5.3\sigma$ tension between early- and late-Universe probes},
    volume={498},
    ISSN={1365-2966},
    url={http://dx.doi.org/10.1093/mnras/stz3094},
@@ -211,16 +211,61 @@
    pages={1420–1439}
 }
 
-@article{Birrer_2020,
+@article{Birrer2020,
    title={TDCOSMO},
    volume={643},
    ISSN={1432-0746},
    url={http://dx.doi.org/10.1051/0004-6361/202038861},
    DOI={10.1051/0004-6361/202038861},
-   journal={Astronomy & Astrophysics},
+   journal={Astronomy \& Astrophysics},
    publisher={EDP Sciences},
    author={Birrer, S. and Shajib, A. J. and Galan, A. and Millon, M. and Treu, T. and Agnello, A. and Auger, M. and Chen, G. C.-F. and Christensen, L. and Collett, T. and et al.},
    year={2020},
    month={Nov},
    pages={A165}
 }
+
+@article{Planck2018results,
+   title={Planck 2018 results},
+   volume={641},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201833910},
+   DOI={10.1051/0004-6361/201833910},
+   journal={Astronomy \& Astrophysics},
+   publisher={EDP Sciences},
+   author={Aghanim, N. and Akrami, Y. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Ballardini, M. and Banday, A. J. and Barreiro, R. B. and Bartolo, N. and et al.},
+   year={2020},
+   month={Sep},
+   pages={A6}
+}
+
+@article{Abbott_2018,
+   title={{Dark Energy Survey Year 1 Results: A Precise H0 Estimate from DES Y1, BAO, and D/H Data}},
+   volume={480},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/sty1939},
+   DOI={10.1093/mnras/sty1939},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Abbott, T M C and Abdalla, F B and Annis, J and Bechtol, K and Blazek, J and Benson, B A and Bernstein, R A and Bernstein, G M and Bertin, E and Brooks, D and et al.},
+   year={2018},
+   month={Jul},
+   pages={3879–3888}
+}
+
+@article{Riess_2019,
+   title={Large Magellanic Cloud Cepheid Standards Provide a 1% Foundation for the Determination of the Hubble Constant and Stronger Evidence for Physics beyond $\Lambda$CDM},
+   volume={876},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.3847/1538-4357/ab1422},
+   DOI={10.3847/1538-4357/ab1422},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Riess, Adam G. and Casertano, Stefano and Yuan, Wenlong and Macri, Lucas M. and Scolnic, Dan},
+   year={2019},
+   month={May},
+   pages={85}
+}
+
