--- a/PHYS561/draft.org
+++ b/PHYS561/draft.org
@@ -6,6 +6,9 @@
 #+LATEX_HEADER: \usepackage[margin=1in]{geometry}
 #+LATEX_HEADER: \usepackage[doublespacing]{setspace}
 #+LATEX_HEADER: \usepackage{amsmath}
+#+LATEX_HEADER: \usepackage{esvect}
+#+LATEX_HEADER: \usepackage[round]{natbib}
+#+LATEX_HEADER: \hypersetup{colorlinks=true}
 
 # Local Variables:
 # org-ref-bibliography-notes: "notes.org"
@@ -36,23 +39,24 @@
   cite:RevModPhys.19.361.  The precession of 42.88'' of Mercury's
   orbit strongly supports the theory, for instance. The observation of
   redshifts also shows the evidence of effects from the general
-  relativity. Pound and Rebka detected the energy loss of \gamma ray
-  at the receiver higher than the emitter, making use of M\"{o}ssbauer
-  effect cite:PhysRevLett.4.337. Recent observation of the
-  gravitational radiation shows great success of the theory of
-  relativity as well. LIGO collaboration announced the detection of
-  the gravitational waves from a binary black hole merger
-  cite:Abbott:2016blz.
+  relativity. cite:PhysRevLett.4.337 detected the energy loss of
+  \gamma ray at the receiver higher than the emitter, making use of
+  M\"{o}ssbauer effect. Recent observation of the gravitational
+  radiation shows great success of the theory of relativity as
+  well. LIGO collaboration announced the detection of the
+  gravitational waves from a binary black hole merger
+  citep:Abbott:2016blz.
 
   Besides the phenomena mentioned above, an intriguing effects is the
   deflection of light by a massive object.  The light ray travels
   along the geodesic which is not "straight" line anymore as a result
   of curved space-time. This effect induce an interesting phenomena
-  called gravitational lensing, which was first proposed by Einstein
+  called gravitational lensing, which was first proposed by
   cite:Einstein506. If a massive object is placed between the source
   and the observer, the light rays will be deflected and thus the
   observer may find magnified images of the source. This phenomena was
-  confirmed by the discovery of quasar QSO 0957+561A,B cite:Walsh:1979nx.
+  confirmed by the discovery of quasar QSO 0957+561A,B
+  cite:Walsh:1979nx.
 
   This paper will discuss the theoretical basics and experimental
   results briefly. It is orgnized in the following way: simple models
@@ -60,13 +64,13 @@
   results in experiment will be discussed in Sec. [[sec:expr]]; and
   summary and outlook will be outlined in Sec. [[sec:summ]].
 
-* Theoretical aspects
+* Theoretical basics
   <<sec:theo>>
 
   In this section, a few simple models of gravitational lensing will
   be discussed. Two catogeries will be introduced: lensing by the
   point mass and lensing by the galaxy. Here we follow the
-  deriviations from cite:narayan_lectures_1997.
+  deriviations from cite:narayanlectures1997.
 
   In general, the mathematical formulism is hard to resolve and quite
   complicated for the light propagation in an arbitrary curved
@@ -76,55 +80,265 @@
   from the lensing object with Newtonian gravitational potential. The
   motion of the mass object inducing lensing effect is also very slow.
   These conditions are satified in most times. See discussions in
-  cite:narayan_lectures_1997.
+  cite:narayanlectures1997.
 
-** Lensing by point mass
-   <<sec:theo-point-mass>>
-   The light ray from distant source
+  <<sec:theo-point-mass>> The light ray from distant source will be
+  deflected by an angle
+\begin{equation}
+  \vec{\hat{\alpha}} = \frac{4GM}{c^{2}b} \label{eq:alpha-hat}
+\end{equation}
+where M is the mass of lensing
+  object and b is the impact parameter. The case considered here is
+  limited that the both sources and observers are far away from the
+  lensing. Thus the deflection happens in a very small region,
+  characterized by the impact parameter. And the distribution along
+  line of sight becomes unimportant. The intervening object can be
+  treated as a thin sheet orthogonal to the line of sight. This plane
+  of the mass sheet is usually referred to lens plane. The projected
+  mass distribution, or surface mass distribution, is expressed by
 
-  Lensing equation
   \begin{equation}
-\overrightarrow{\beta} = \overrightarrow{\theta} - \overrightarrow{\alpha}(\overrightarrow{\theta}) \label{eqn:len}
+\Sigma(\vec{\xi}) = \int \rho(\vec{\xi}, z)dz \label{eq:mass-sheet}
   \end{equation}
+  where $\vec{\xi}$ is the two-dimensional vector in the
+  lens plane. Combining eqref:eq:alpha-hat and eqref:eq:mass-sheet
+  will give the overall deflection by the thin mass sheet,
+\begin{equation}
+\vec{\hat{\alpha}} = \frac{4G}{c^2} \int \frac{(\vec{\xi}-\vec{\xi'})\Sigma(\vec{\xi'})}{|\vec{\xi}-\vec{\xi'}|^2} d^2 \xi'
+\label{eq:alpha-mass-sum}
+\end{equation}
+  For a circularly symmetric lens, as a special case, the problem is
+  reduced to one-dimension. The deflection angle is a function of the
+  distance to the center of the mass sheet in lens plane. The
+  expression is simplified as
+\begin{equation}
+\hat{\alpha} = \frac{4GM(\xi)}{c^2\xi}
+\label{eq:alpha-mass-1D}
+\end{equation}
+  where \xi is the distance from the lens center and M(\xi) is the
+  mass enclosed within the raidus \xi, give by
+\begin{equation}
+M(\xi) = 2\pi \int^{\xi}_0 \Sigma(\xi')\xi'd\xi'.
+\label{eq:m-1D}
+\end{equation}
 
-** Lensing by galaxies
-   <<sec:theo-galaxies>>
+#+CAPTION: The illustration of lensing effect. The source, image and observer are denoted as S, I and O respectively. Credit: cite:narayanlectures1997.
+#+NAME: fig:one_image
+[[./figures/one_image.png]]
 
-* Experimental aspects
+  As mentioned above, in the approximation of locally flat Minkowskian
+  spacetime with perturbatoins of gravitation, the relation
+\begin{equation}
+separation = distance \times angle \label{eq:distance}
+\end{equation}
+  holds.  Denoting the distance between the observer and the source,
+  the observer and the lens, and the lens and the source with D_s, D_d
+  and D_ds, respecitively, we will have $\theta D_s = \beta D_s -
+  \hat{\alpha}D_{ds}$. This relation is obivous as illustrated in
+  Fig. [[fig:one_image]].  Introducing reduced deflection angle
+  \begin{equation}
+\vec{\alpha} = \frac{D_{ds}}{D_s} \vec{\hat{\alpha}},
+\label{eq:alpha-reduce}
+  \end{equation}
+  lens equation is finally obtained
+  \begin{equation}
+\vec{\beta} = \vec{\theta} - \vec{\alpha}(\vec{\theta}). \label{eq:len}
+  \end{equation}
+  Note that Equation eqref:eq:distance is not neccessary to be true in
+  curved space. However, Equations eqref:eq:alpha-reduce and
+  eqref:eq:len are true if the distance is /defined/ to satisfy the
+  Equation eqref:eq:distance.
+
+  Taking constant surface-mass density as an example, the reduced deflection angle is
+  \begin{equation}
+\alpha(\theta) = \frac{4\pi G\Sigma}{c^2}\frac{D_d D_{ds}}{D_s} \theta, \label{eq:alpha-reduce-circular}
+  \end{equation}
+  setting $\xi = D_d \theta$. For a lens lies on the optical axis
+  (\beta=0), the corresponding constant surface mass density is
+\begin{equation}
+\Sigma_{cr} = \frac{c^2}{4\pi G} \frac{D_s}{D_d D_{ds}}. \label{eq:sigma-critical}
+\end{equation}
+  The light rays from the sources perfectly focus on the position of
+  observer, though the focus length depends on both the lensing ojbect
+  and the positions of the source and the observer. In this case, the
+  mass density is referred as /critical/ surface mass density. In case
+  of \Sigma > \Sigma_{cr}, multiple images will show up and the
+  corresponding surface mass density is referred as /supercritical/.
+
+  Considering the case of the circularly symmetric lens, but with an
+  arbitraty mass distribution, according to Equations eqref:eq:alpha-hat
+  and eqref:eq:alpha-reduce, the lens equation becomes
+\begin{equation}
+\beta(\theta) = \theta - \frac{D_{ds}}{D_d D_s} \frac{4GM(\theta)}{c^2\theta} \label{eq:len-circular}.
+\end{equation}
+  For a source lying on the optic axis (\theta=0) the solution for the images reads
+   \begin{equation}
+\theta_E = \bigg[ \frac{4GM(\theta_E)}{c^2} \frac{D_{ds}}{D_d D_s}\bigg]^{1/2}
+   \end{equation}
+  From the rotational symmetry, we know that the images are located
+  at the ring of \theta_E. The ring is called Einstein ring and the
+  \theta_E is called Einstein radius.
+
+  An instructive example is the case of lensing by point mass, the Einstein radius is given by
+   \begin{equation}
+\theta_E = \bigg[ \frac{4GM}{c^2} \frac{D_{ds}}{D_d D_s}\bigg]^{1/2}
+   \end{equation}
+   and the lens equation reads
+   \begin{equation}
+\beta = \theta - \frac{\theta_E^2}{\theta}.
+   \end{equation}
+  The images are
+\begin{equation}
+\theta_{\pm} = \frac{1}{2} \bigg( \beta\pm\sqrt{\beta^2+4\theta_E^2} \bigg).
+\end{equation}
+  Thus one is inside the Einstein ring and the other is outside.
+
+  Though the phenomena is intestering, the magnification of point
+  mass lens is hard to observe unless the lens is extremly
+  massive. However, the detection become reliable if the lens and the
+  source move relative to each other. The relative motion will enlarge
+  the lensing-induced time delay and the effect is referred as
+  microlensing if the lensing object has stellar mass. And it has been
+  observed in QSO09567+561.
+
+  <<sec:theo-galaxies>> The point mass model has been discussed so
+  far. It turns out complicated and dependent on the model of mass
+  distribution when considering galaxies as lens. Here we consider a
+  simple model.
+
+  We assume the constituents in the galaxies behave like particles of
+  ideal gas. Their gravitational potential is spherical symmetric and
+  confining them inside the galaxy. The equation of state of these
+  mass constituents reads
+   \begin{equation}
+p = \frac{\rho kT}{m} \label{eq:thermal-energy}
+   \end{equation}
+  where \rho is the mass densty of the galaxy and the m is the mass
+  of the constituent. In thermal equilibrium, we have
+   \begin{equation}
+\frac{1}{2} m \sigma_{v}^2 = \frac{1}{2} kT
+   \end{equation}
+  where \sigma_v is the one-dimensional velocity dispersion. Assuming
+  the galaxy is isothermal, the dispersion is constant over the
+  region of the galaxy. The hydrostatic equation
+  $\frac{\nabla p}{\rho}=\vec{f}$ reads
+\begin{equation}
+\frac{1}{\rho} \frac{dp}{dr} = -\frac{GM(r)}{r^2} \label{eq:hydrostatic}
+\end{equation}
+  since \rho, p and M are merely functions of r and $\frac{dM}{dr} =
+  4\pi r^2 \rho$ due to the rotational symmetry. Combing Equations
+  eqref:eq:thermal-energy and eqref:eq:hydrostatic, the solution reads
+\begin{equation}
+\rho(r) = \frac{\sigma_v^2}{2\pi G}\frac{1}{r^2}.
+\end{equation}
+
+  This mass distribution is referred as the /singular isothermal
+  sphere/. The density is proportional to r^{-2}. There are also other
+  models for the mass distribution of galaxies but we will not discuss
+  them here.
+
+  It is also useful to define the the projected Newtonian potential of
+  the lens. It is related the magnification of the lens. The projected
+  potential is defined as
+\begin{equation}
+\psi(\vec{\theta}) = \frac{D_{ds}}{D_d D_s} \frac{2}{c^2} \int \Phi(D_d \vec{\theta}, z)dz
+\end{equation}
+  where \Phi is the Newtonian in three-dimension. The gradient of \psi
+  with respect to \theta is simply $\vec{\alpha}$,
+\begin{equation}
+\nabla_{\theta} \psi = \vec{\alpha}.
+\end{equation}
+  And we know the divergence of the gravitational potential is
+  proportional to the mass density. Thus we have
+\begin{equation}
+\nabla^2_{\theta} \psi = \frac{2}{c^2} \frac{D_d D_{ds}}{D_s} \int \nabla^2_\xi \Phi dz = \frac{2}{c^2}\frac{D_d D_{ds}}{D_s} 4\pi G\Sigma = 2\frac{\Sigma(\vec{\theta})}{\Sigma_{cr}}\equiv 2\kappa(\vec{\theta}).
+\end{equation}
+  The term \kappa is called convergence.
+
+  The magnification of the lens is defined as
+\begin{equation}
+magnification = \frac{image\,\, area}{source\,\, area} = \mathrm{det}( \frac{\delta \theta^2} {{\delta \beta^2}} ).
+\end{equation}
+  Thus the Jacobian matrix $A\equiv\partial\vec{\beta}/\partial\vec{\theta}$
+  is the inverse of the magnification tensor. We have
+\begin{equation}
+A = \bigg(\delta_{ij} - \partial{\alpha_i}/\partial \beta_j\bigg) = \bigg( \delta_{ij} - \frac{\partial^2\psi}{\partial\theta_i\theta_j} \bigg).
+\end{equation}
+It can be further written as
+\begin{align}
+\begin{split}
+A &=
+\begin{pmatrix}
+1-\kappa-\gamma_1 & -\gamma_2 \\
+-\gamma_2 & 1+\kappa+\gamma_1
+\end{pmatrix}
+\\
+&=(1-\kappa)
+\begin{pmatrix}
+1 & 0\\0 & 1
+\end{pmatrix}
+-\gamma
+\begin{pmatrix}
+\cos{2\phi} & \sin{2\phi} \\
+\sin{2\phi} & -\cos{2\phi}
+\end{pmatrix},
+\end{split}
+\end{align}
+  by introducing notations
+\begin{align}
+\frac{\partial^2\psi}{\partial\theta_i\theta_j} &\equiv \psi_{ij} \\
+\kappa &= \frac{1}{2}(\psi_{11}+\psi_{22}) \\
+\gamma_1 &= \frac{1}{2}(\psi_{11}-\psi_{22})\equiv \gamma \cos{2\phi} \\
+\gamma_2 &= \psi_{12} = \psi_{21} \equiv \gamma \sin{2\phi}.
+\end{align}
+Term \kappa is named convergence and \gamma_j is named shear
+tensor. The quantity \gamma denotes the magnitude of the shear and
+\phi denotes the orientation. The magnification is
+\begin{equation}
+\mathrm{det}A^{-1} = \frac{1}{(1-\kappa)^2-\gamma^2}.
+\end{equation}
+
+* Experimental results
   <<sec:expr>> As mentioned in Sec. [[sec:intro]], the discovery of
   QSO957+561A,B shows strong evidence of the existence of
-  gravitational lensing effect cite:Walsh:1979nx. The results are
+  gravitational lensing effect citep:Walsh:1979nx. The results are
   briefly discussed here. QSO957+561A,B are images of a single
   quasar. A quasar is also known as a quasi-stellar object (QSO),
-  discovered by cite:schmidt_3c_1963. It is the nuclear region with
+  discovered by cite:schmidt3c1963. It is the nuclear region with
   extremly high luminosity of a remote galaxy. As a result of large
   distantance, the probability of observing lensing effects of massive
   objects between quasars and observers become large. Quasars provide
   opportunities to discover gravitational lensing in experiments. The
   explanation of lensing effects for two images, QSO957+561A,B,
   separated by 6'', was finally confirmed by
-  cite:1980ApJ_241_507Y,1984ApJ_287_538G. The evidence is provided by
-  the facts below:
+  cite:1980ApJ241507Y,1984ApJ287538G. Fig. [[fig:spectra-QSO0957-561]]
+  show the spectra of wavelength of QSO957+561A,B and they show
+  similarity with each other. The evidence is provided by the facts
+  below:
   - The similarity of flux spectra between two images.
   - The intervening galaxy between images and the observers
   - The luminous distribution of cores of two images are related by a
     magnification matrix according to lensing effects.
 
+  #+CAPTION: The spectra of wave length of QSO0957+561A,B citep:Walsh:1979nx. The upper pannel (a) is for image A and lower one (b) is for B.
+  #+NAME: fig:spectra-QSO0957-561
+  [[./figures/QuasarsAB.png]]
+
   In addition to the test of gravitation theory, the lensing effects
   can also help in several ways in the astronomical measurements. It
   was proposed that the Hubble constant could be measured through the
-  gravitational lensing cite:1964MNRAS_128_307R. The time of light
+  gravitational lensing citep:1964MNRAS128307R. The time of light
   propagation of two images are uneven since the effective length of
   path are different. The time delay difference \Delta\tau between two
   images is proportional to the difference of path of length and thus
-  the inverse of Hubble constant (H_0^{-1}). The product H_0\Delta\tau
-  depends merely on the geometric positions of sources, lensing and
-  observers and the model of lensing effects. Once H_0\Delta\tau is
-  determined and \Delta\tau is measured, the Hubble constant is also
-  obtained.
+  the inverse of Hubble constant (H_0^{-1}). The product
+  $H_0\Delta\tau$ depends merely on the geometric positions of
+  sources, lensing and observers and the model of lensing
+  effects. Once $H_0\Delta\tau$ is determined and \Delta\tau is
+  measured, the Hubble constant is also obtained.
 
   The way using gravitational lensing to determine Hubble constant has
-  several advantages cite:narayan_lectures_1997:
+  several advantages citep:narayanlectures1997:
   - The sources are distant at large redshifts and their velocities
     can be considered small enough compared to the Hubble flow.
   - The measurements does not wait for the motion of sources with the
@@ -140,7 +354,7 @@
   differences between arrival times of multiple images; the
   understanding of the distortion of the angular diameter distances
   along the line of sight; the model for the masss distribution of the
-  lens cite:Birrer_2020. The procedures of time delay measurements has
+  lens citep:Birrer2020. The procedures of time delay measurements has
   been validated via simulations. The distortion of line of sight is
   corrected statistically via comparisons with numerical simulations
   and the residual is negligible compared to overall
@@ -148,9 +362,39 @@
   measurement implementing gravitational lensing infers that the the
   value of Hubble constant is $73.3^{+1.7}_{1.8}$ km s^{-1} Mpc^{-1},
   in agreement with local measurements type Ia supernovae
-  cite:Wong_2019.
+  citep:Wong2019. Fig. [[fig:H0wong]] shows the probability density
+  distribution of H_0.
 
+  #+CAPTION: The posterior probability density distributions for H_0 from different individual lensing systems. Six systems are denoted by shaded area and the black curve is the combined result of H_0 citep:Wong2019.
+  #+NAME: fig:H0wong
+  [[./figures/H0WongEtAl.png]]
 
+  Besides the implication for Hubble constant, gravitational lensing
+  also serve as powerful tools to probe the lensing objects
+  themselves. Thus it provide good probes to searching for dark matter
+  and dark energy. And it merely depends on the mass distributions of
+  dark matters, regardless the their intrinsic nature.
+
+  The spatial distribution is more extended than the expectations
+  merely with visible baryons, shows the clear evidence of the dark
+  matter.
+
+  However, several issues presents in the processes of exploration of
+  dark matters. Signals from large-scale structure is very faint with
+  little chance to detect. And mass distributions of measurable
+  galaxies are need to be fixed as priori. The atmosphere of the Earth
+  also smears the signal. To overcome these difficulties, Hubble Space
+  Telescope was launched. It produced the projected 2D map of dark
+  matters for the fist time. The similarity between maps of dark
+  matters and maps of baryonic matters indicates that dark matters are
+  still under the rule of gravitation.
+
+  In addition to the studies of dark matters in cluster, the search
+  for dark matters in a galaxy is also of interests. The gravitational
+  effects assist to detect the haloes of a galaxy. Measurements are
+  performed via galaxy-galaxy lensing, selecting a subset of
+  classified images. Combing these images will give the average
+  density of dark matter of a given galaxy.
 
 * Summary and outlook
   <<sec:summ>> The theoretical basics and experimental outputs have
@@ -165,14 +409,18 @@
   measurements have enriched the knowledge for the universe and
   provide valuable experiences to explore further.
 
+  #+CAPTION: H_0 values from different experiments citep:Planck2018results,Abbott_2018,Riess_2019,Wong2019.
+  #+NAME: fig:H0discrepancy
+  [[./figures/H0discrepancy.png]]
+
   The recent measurements of Hubble constant shows discrepancy between
   the early universe value from cosmic micro waves and late universe
   value from gravitational lensing with a tension of $5.3\sigma$
-  cite:Wong_2019.  This raise a question whether there is new physics
+  citep:Wong2019. This raise a question whether there is new physics
   behind the puzzle. Before proposing new physics theories, further
   constraints on the cosmography of time delay are needed at
   first. The precision of H_0 values by gravitational lensing can be
   further improved.
 
-bibliographystyle:abbrv
+bibliographystyle:abbrvnat
 bibliography:refs.bib
